# Uni-2020

./: README.md
Labo 5/: Afspraak.cpp  Afspraak.h  CMakeLists.txt  TPredicate.cpp  TPredicate.h  Verzameling.cpp  Verzameling.h  main.cpp
Practicum 3/: CMakeLists.txt
Practicum 3/Computer/: Computer.cpp  Computer.h  harddisk.cpp  harddisk.h  moederbord.cpp  moederbord.h  videokaart.cpp  videokaart.h
Practicum 3/Dokter/: Dokter.cpp  Dokter.h  Orthopedist.cpp  Orthopedist.h  main2.cpp
Practicum 3/Werknemer/: Directeur.cpp  Directeur.h  Manager.cpp  Manager.h  Werknemer.cpp  Werknemer.h  main.cpp  rest.h
boom/: Boom.c  Boom.h  CMakeLists.txt  Sensor.c  Sensor.h  main.c
labo 6/: Boom.cpp  Boom.h  CMakeLists.txt  Knoop.cpp  Knoop.h  main.cpp
tijden/: CMakeLists.txt  Datum.cpp  Datum.h  Verzameling.cpp  Verzameling.h  main.cpp
voetbal/: Actie.cpp  Actie.h  CMakeLists.txt  Keeper.cpp  Keeper.h  OnderschepActie.cpp  OnderschepActie.h  PasActie.cpp  PasActie.h  SaveActie.cpp  SaveActie.h  Speler.cpp  Speler.h  aanvaller.cpp  aanvaller.h  doelpoging.cpp  doelpoging.h  loop.cpp  loop.h  main.cpp  middenvelder.cpp  middenvelder.h  team.cpp  team.h  verdediger.cpp  verdediger.h
